<resources>
    <string name="app_name">Weather</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_internet">Whoops! Seems you\'ve been banned in the Internet. But there might be hope:</string>
    <string name="no_gps">You denied location permission. Too bad you don\'t trust us! Feel free to add cities manually</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="add_city">Add city</string>
    <string name="search_empty_text">Tap the search icon to start searching cities</string>
    <string name="connection_lost">Network connection lost</string>
    <string name="connection_established">Network connection established</string>
    <string name="language_code">en</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="open_on_map">Open on map</string>
    <string name="search_nothing_found">Nothing found for your query</string>
    <string name="loading">Loading…</string>
    <string name="wind_speed">%1$sm/s</string>

    <string name="weather_notification_heading">Weather in %1$s</string>
    <string name="weather_notification_text">Minimum temperature: %1$d°\nMaximum temperature: %2$d°\nFeels like: %3$d°</string>
    <string name="weather_notification_channel_name">Weather for %1$s</string>
    <string name="weather_notification_channel_desc">Daily weather notifications for %1$s</string>
    <string name="schedule_notification">Schedule notification</string>
    <string name="precipitation_map">Precipitation map</string>
    <string name="notification_scheduled">Notification scheduled</string>
    <string name="choose_maps_msg">Which maps do you want to use?</string>
    <string name="choose_maps">Choose maps</string>
    <string name="yandex">Yandex</string>
    <string name="google" translatable="false">Google</string>
    <string name="error_getting_location">Error getting location. Add cities manually</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="remove_notification">Remove notification</string>
    <string name="notification_delete_msg">Are you sure you want to delete scheduled notification?</string>
    <string name="are_you_sure">Are you sure?</string>


</resources>