<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/currentWeatherFragment">

    <fragment
        android:id="@+id/currentWeatherFragment"
        android:name="com.calamity.weather.ui.weather.WeatherFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_weather">
        <action
            android:id="@+id/action_currentWeatherFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_currentWeatherFragment_to_precipitationMapFragment"
            app:destination="@id/precipitationMapFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.calamity.weather.ui.locationsearch.SearchFragment"
        android:label="@string/add_city"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/precipitationMapFragment"
        android:name="com.calamity.weather.ui.map.PrecipitationMapFragment"
        android:label="@string/precipitation_map"
        tools:layout="@layout/fragment_precipitation_map">
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="-1"/>
    </fragment>
</navigation>