<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.github.florent37.expansionpanel.ExpansionHeader
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:expansion_headerIndicator="@id/headerIndicator"
            app:expansion_layout="@id/expansionLayout"
            android:animateLayoutChanges="true"
            app:expansion_toggleOnClick="true"
            android:elevation="4dp">

            <RelativeLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_city_item"
                android:padding="16dp">

                <TextView
                    android:id="@+id/location_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/temperature"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:text="Moscow"
                    tools:drawableStart="@drawable/ic_location_24dp"/>

                <TextView
                    android:id="@+id/conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/location_name"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:layout_toStartOf="@id/temperature"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    tools:text="Light showers" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/headerIndicator"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    tools:text="-7°" />

                <ImageView
                    android:adjustViewBounds="true"
                    android:id="@+id/headerIndicator"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_width="wrap_content"
                    app:srcCompat="@drawable/ic_expansion_header_indicator_white_24dp"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>



        </com.github.florent37.expansionpanel.ExpansionHeader>

        <com.github.florent37.expansionpanel.ExpansionLayout
            android:id="@+id/expansionLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:expansion_expanded="true"
            android:layout_marginTop="-32dp">

            <RelativeLayout
                android:id="@+id/city_content_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="56dp"
                android:paddingBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:background="@drawable/background_city_content"
                android:clipToPadding="false"
                android:clipChildren="false">

                <TextView
                    android:id="@+id/today"
                    android:text="@string/today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:layout_toStartOf="@id/temperature_minmax_today"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    tools:text="Today · Light showers" />

                <TextView
                    android:id="@+id/temperature_minmax_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    tools:text="0° / -7°" />

                <TextView
                    android:id="@+id/tomorrow"
                    android:text="@string/tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/today"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:layout_toStartOf="@id/temperature_minmax_tomorrow"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    tools:text="Tomorrow · Light showers" />

                <TextView
                    android:id="@+id/temperature_minmax_tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"
                    android:layout_below="@+id/today"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    tools:text="0° / -7°" />

                <TextView
                    android:id="@+id/after_tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tomorrow"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:layout_toStartOf="@id/temperature_minmax_after_tomorrow"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    tools:text="Mon · Light showers" />

                <TextView
                    android:id="@+id/temperature_minmax_after_tomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/white"
                    android:layout_below="@+id/tomorrow"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="16sp"
                    tools:text="0° / -7°" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daily_weather_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/after_tomorrow"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_daily"/>

                <Button
                    android:id="@+id/open_map_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/daily_weather_recycler"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/background_transparent_button"
                    android:text="@string/open_on_map"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/notify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/daily_weather_recycler"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@+id/open_map_btn"
                    android:background="@drawable/background_transparent_button"
                    android:text="@string/schedule_notification"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/text_precipitation_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitation_map"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/notify"/>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map"
                    android:layout_width="320dp"
                    android:layout_height="320dp"
                    android:layout_centerHorizontal="true"
                    app:mapType="none"
                    app:liteMode="true"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/text_precipitation_map"/>

                <ImageView
                    android:id="@+id/tiles_overlay"
                    android:layout_width="320dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="320dp"
                    android:layout_marginTop="8dp"
                    android:alpha=".5"
                    android:layout_below="@id/text_precipitation_map"/>


            </RelativeLayout>

        </com.github.florent37.expansionpanel.ExpansionLayout>

    </LinearLayout>
</layout>